--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "shortid": "^2.2.17",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+     "axios": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
